--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -61,3 +61,10 @@ body {
     justify-content: space-between;
     align-items: center;
 }
+.loginHeader
+{
+    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
